<resources>
    <string name="app_name">NewConnect</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="florence_njoki">Florence Njoki</string>
    <string name="hello_budies">Hello Budies</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>

    <!-- Settings  -->
    <string name="sync_pref">Sync</string>
    <string name="sync_pref_summary">
        Get your contacts, photos, videos and subcriptions on your device</string>

    <string name="pref_syncConnectionType">Sync Connection Type</string>
    <string name="pref_syncConnectionType_dialog_title">Perform Sync Using</string>
    <string name="pref_syncConnectionType_default_value">WiFi</string>
    <string name="pref_syncConnectionType_summary">WiFi</string>

    <string-array name="pref_syncConnectionType_entries">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile</item>
    </string-array>

    <string-array name="pref_syncConnectionType_values">
        <item>WiFi</item>
        <item>Mobile Data</item>
        <item>WiFi/Mobile</item>
    </string-array>

    <!-- Settings from Settings Example Project-->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="night_mode">night_mode</string>
    <string name="travel_feed">Travel Feed</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dinner">Dinner</string>
    <string name="lunch">Lunch</string>
    <string name="events">Events</string>
    <string name="travel">Travel</string>
    <string name="travel_posts">Travel Posts</string>
    <string name="events_posts">Events Posts</string>
    <string name="lunch_posts">Lunch Posts</string>
    <string name="dinner_posts">Dinner Posts</string>
    <string name="test">Test</string>
    <string name="title_activity_design_test">DesignTestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
