<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Communication">

        <SwitchPreference
            android:defaultValue="true"
            android:key="example_switch"
            android:summary="@string/pref_description_social_recommendations"
            android:title="@string/pref_title_social_recommendations" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->


        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
        <ListPreference
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:key="example_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_add_friends_to_messages" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_new_message"
            android:title="@string/pref_title_new_message_notifications" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="notifications_new_message"
            android:key="notifications_new_message_vibrate"
            android:title="@string/pref_title_vibrate" />
    </PreferenceCategory>

    <!--Sync Settings-->
    <PreferenceCategory android:title="Data and Sync">
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/sync_pref"
            android:summary="@string/sync_pref_summary"
            android:defaultValue="true"/>
        <ListPreference
            android:dependency="pref_sync"
            android:key="pref_sync_connection_type"
            android:title="@string/pref_syncConnectionType"
            android:entries="@array/pref_syncConnectionType_entries"
            android:entryValues="@array/pref_syncConnectionType_values"
            android:defaultValue="@string/pref_syncConnectionType_default_value"
            android:summary="@string/pref_syncConnectionType_summary"/>

        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
            dismiss it. -->
        <!-- New Added. -->
        <ListPreference
            android:dependency="pref_sync"
            android:defaultValue="180"
            android:entries="@array/pref_sync_frequency_titles"
            android:entryValues="@array/pref_sync_frequency_values"
            android:key="sync_frequency"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_sync_frequency" />

        <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
             design guidelines. -->
        <Preference android:title="@string/pref_title_system_sync_settings"
            android:dependency="pref_sync">
            <intent android:action="android.settings.SYNC_SETTINGS" />
        </Preference>
    </PreferenceCategory>



    <!-- Add NightMode here -->
    <PreferenceCategory android:title="Display">
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="example_text"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />


    </PreferenceCategory>



</PreferenceScreen>